# Cpp-Server-Client

./: .gitignore  CMakeLists.txt  README.md
lib/boost/lib/: libboost_atomic.so.1.72.0  libboost_chrono.so.1.72.0  libboost_container.so.1.72.0  libboost_context.so.1.72.0  libboost_contract.so.1.72.0  libboost_coroutine.so.1.72.0  libboost_date_time.so.1.72.0  libboost_fiber.so.1.72.0  libboost_filesystem.so.1.72.0  libboost_graph.so.1.72.0  libboost_iostreams.so.1.72.0  libboost_locale.so.1.72.0  libboost_log.so.1.72.0  libboost_log_setup.so.1.72.0  libboost_math_c99.so.1.72.0  libboost_math_c99f.so.1.72.0  libboost_math_c99l.so.1.72.0  libboost_math_tr1.so.1.72.0  libboost_math_tr1f.so.1.72.0  libboost_math_tr1l.so.1.72.0  libboost_prg_exec_monitor.so.1.72.0  libboost_program_options.so.1.72.0  libboost_python36.so.1.72.0  libboost_random.so.1.72.0  libboost_regex.so.1.72.0  libboost_serialization.so.1.72.0  libboost_stacktrace_addr2line.so.1.72.0  libboost_stacktrace_backtrace.so.1.72.0  libboost_stacktrace_basic.so.1.72.0  libboost_stacktrace_noop.so.1.72.0  libboost_system.so.1.72.0  libboost_thread.so.1.72.0  libboost_timer.so.1.72.0  libboost_type_erasure.so.1.72.0  libboost_unit_test_framework.so.1.72.0  libboost_wave.so.1.72.0  libboost_wserialization.so.1.72.0
lib/boost/lib/cmake/boost_atomic-1.72.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
lib/boost/lib/cmake/boost_chrono-1.72.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
lib/boost/lib/cmake/boost_container-1.72.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
lib/boost/lib/cmake/boost_context-1.72.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
lib/boost/lib/cmake/boost_contract-1.72.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
lib/boost/lib/cmake/boost_coroutine-1.72.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-shared.cmake  libboost_coroutine-variant-static.cmake
lib/boost/lib/cmake/boost_date_time-1.72.0/: boost_date_time-config.cmake  libboost_date_time-variant-shared.cmake  libboost_date_time-variant-static.cmake
lib/boost/lib/cmake/boost_exception-1.72.0/: boost_exception-config.cmake
lib/boost/lib/cmake/boost_fiber-1.72.0/: boost_fiber-config.cmake  libboost_fiber-variant-shared.cmake  libboost_fiber-variant-static.cmake
lib/boost/lib/cmake/boost_fiber_numa-1.72.0/: boost_fiber_numa-config.cmake
lib/boost/lib/cmake/boost_filesystem-1.72.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-shared.cmake  libboost_filesystem-variant-static.cmake
lib/boost/lib/cmake/boost_graph-1.72.0/: boost_graph-config.cmake  libboost_graph-variant-shared.cmake  libboost_graph-variant-static.cmake
lib/boost/lib/cmake/boost_graph_parallel-1.72.0/: boost_graph_parallel-config.cmake
lib/boost/lib/cmake/boost_headers-1.72.0/: boost_headers-config.cmake
lib/boost/lib/cmake/boost_iostreams-1.72.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-shared.cmake  libboost_iostreams-variant-static.cmake
lib/boost/lib/cmake/boost_locale-1.72.0/: boost_locale-config.cmake  libboost_locale-variant-shared.cmake  libboost_locale-variant-static.cmake
lib/boost/lib/cmake/boost_log-1.72.0/: boost_log-config.cmake  libboost_log-variant-shared.cmake  libboost_log-variant-static.cmake
lib/gtest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
lib/poco/lib/: libPocoEncodings.so.64  libPocoRedis.so.64
lib/rapidjson/lib/cmake/RapidJSON/: RapidJSONConfig.cmake
lib/rapidjson/lib/pkgconfig/: RapidJSON.pc
src/http_server_v1/: CMakeLists.txt  main.cpp
src/http_server_v1/server_main/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Header.h  HttpServer.cpp  HttpServer.h  MIME_TYPES.cpp  MIME_TYPES.h  Reply.cpp  Reply.h  Request.cpp  Request.h  RequestHandler.cpp  RequestHandler.h  RequestParser.cpp  RequestParser.h
src/http_server_v2/: CMakeLists.txt  main.cpp
src/http_server_v2/server_main/: BasicHandler.cpp  BasicHandler.h  HandlerFactory.cpp  HandlerFactory.h  PostRequestHandler.cpp  PostRequestHandler.h  ServerManager.cpp  ServerManager.h
src/test_features/: CMakeLists.txt  main.cpp
src/v1_ssl_client/: CMakeLists.txt  main.cpp
src/v1_ssl_server/: CMakeLists.txt  main.cpp
src/v2_ssl_client/: CMakeLists.txt  ClientManager.cpp  ClientManager.h  main.cpp
src/v2_ssl_client/client_internal/: MyClient.cpp  MyClient.h
src/v2_ssl_server/: CMakeLists.txt  ServerManager.cpp  ServerManager.h  main.cpp
src/v2_ssl_server/server_internal/: MyServer.cpp  MyServer.h
(+90 files in other folders)
